# openSpeechToIntent

./: README.md  pyproject.toml  setup.py
.github/workflows/: build_and_publish_to_pypi.yml
openspeechtointent/: __init__.py  forced_alignment.cpp  model.py  utils.py
openspeechtointent/resources/models/: citrinet_spectrogram_filterbank.npy  citrinet_tokenizer.pkl  citrinet_vocab.json
test/intents/: test_intents.json
